# rust-web-server

./: Cargo.toml  README.md
html/: hello.html
src/: lib.rs  main.rs
