[package]
name = "rust_web_server"
version = "0.1.0"
authors = ["Guillaume Decerprit <guillaume@swift-nav.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
http = "0.2.1"
